--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -326,11 +326,6 @@
                                                 <wm-label padding="unset 0.5em" name="label87" caption="Please note: fees are subject to revision by the municipality."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
-                                        <wm-gridrow name="gridrow79_1">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn151_1" horizontalalign="center">
-                                                <wm-label padding="unset 0.5em" name="label87_1" show="bind:showCannotAddFee" caption="Sorry, fees cannot be paid while the form is under the current status." color="red" fontweight="bold"></wm-label>
-                                            </wm-gridcolumn>
-                                        </wm-gridrow>
                                         <wm-gridrow name="gridrow55">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn115">
                                                 <wm-livegrid formlayout="dialog" name="livegrid4">
@@ -390,6 +385,11 @@
                                                         update-mode="true"></wm-form-action>
                                                     </wm-liveform>
                                                 </wm-livegrid>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow79_1">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn151_1" horizontalalign="center">
+                                                <wm-label padding="unset 0.5em" name="label87_1" show="bind:showCannotAddFee" caption="Sorry, fees can not be paid while the form is in the current status. Please check back later." color="red" fontweight="bold"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
