--- a/src/main/webapp/pages/ProjectsDevDataEntry/ProjectsDevDataEntry.html
+++ b/src/main/webapp/pages/ProjectsDevDataEntry/ProjectsDevDataEntry.html
@@ -149,15 +149,15 @@
                 </wm-tabpane>
                 <wm-tabpane name="tabpanefees" title="Cart Fees">
                     <wm-livegrid formlayout="dialog" name="livegrid4">
-                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="Fees List" dataset="bind:Variables.lvFeesData.dataSet" navigation="Classic" name="grid4">
+                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="Fees List" dataset="bind:Variables.lvFeesData.dataSet" navigation="Classic" name="grid4" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
                             <wm-grid-column binding="feeType" caption="Fee Type" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="paidStatus" caption="Paid Status" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="amount" caption="Amount" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="amount" caption="Amount" type="big_decimal" generator="assigned" edit-widget-type="text" show="true" filterwidget="text" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="formTypes.formType" caption="Form Type" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormTypes"></wm-grid-column>
                             <wm-grid-column binding="masterForms.formTitle" caption="Form Title" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="MasterForms"></wm-grid-column>
                             <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Municipalities"></wm-grid-column>
                             <wm-grid-column binding="users.email" caption="Users Email" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
-                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                             <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                             <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
