--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -9,6 +9,9 @@
         <wm-nav-item name="list_order">
             <wm-anchor caption="My Municipality" name="orderLink" iconclass="wi wi-account-balance" on-click="Variables.goToPage_MyMunicipality.invoke()" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin" badgevalue="bind:Variables.ProcessFormsCountForEmployee.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
+        <wm-nav-item name="list_order">
+            <wm-anchor caption="Code Enforcement" name="codeEnforcement" iconclass="wi wi-chrome-reader-mode" on-click="Variables.goToPage_CodeEnforcementDashboard.invoke()" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin,CodeOfficer,CodeManager"></wm-anchor>
+        </wm-nav-item>
         <wm-nav-item name="list_inventory">
             <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-domain" on-click="Variables.goToPage_MunicipalityAdministration.invoke()" accessroles="MunicipalityAdmin,CXAdmin" badgevalue="bind:Variables.FormDesignsForMuniAdmin.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
