--- a/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
+++ b/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
@@ -1,10 +1,105 @@
-<wm-page data-ng-controller="CodeEnforcementDashboardPageController" pagetitle="Code Enforcement Dashboard"> 
-    <wm-header content="header"></wm-header> 
-    <wm-top-nav content="topnav"></wm-top-nav> 
-    <wm-content> 
-        <wm-left-panel columnwidth="2" content="leftnav"></wm-left-panel> 
-        <wm-page-content columnwidth="10"> 
-        </wm-page-content> 
-    </wm-content> 
-    <wm-footer content="footer"></wm-footer> 
+<wm-page data-ng-controller="CodeEnforcementDashboardPageController" pagetitle="Code Enforcement Dashboard" name="page1">
+    <wm-header content="header" name="header1"></wm-header>
+    <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
+    <wm-content name="content1">
+        <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
+        <wm-page-content columnwidth="10" name="page_content1">
+            <wm-layoutgrid name="layoutgrid1" columns="3">
+                <wm-gridrow name="gridrow7">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn17_1" padding="2em unset">
+                        <wm-label name="label5" caption="Code Enforcement Dashboard" fontweight="bold" class="h4"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn19_1" padding="2em unset">
+                        <wm-composite name="composite1" show="bind:Variables.AdminsMunicipalities.dataSet.content.length > 1">
+                            <wm-label class="col-md-3 form-control-static" name="label6" caption="Select Municipality" fontweight="bold"></wm-label>
+                            <wm-container class="col-md-9" name="container1">
+                                <wm-select name="selectMunicipality" datafield="All Fields"></wm-select>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow8">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn18" horizontalalign="center" padding="2em unset">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid3">
+                                <wm-gridrow height="100%" name="gridrow11">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn25" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-open-in-new"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn26" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="NEW CASES" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn19" horizontalalign="center" padding="2em unset">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid4">
+                                <wm-gridrow height="100%" name="gridrow8_1">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn20_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-lock-open"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn21_1" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="OPEN CASES" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn17" horizontalalign="center" padding="2em unset">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid7">
+                                <wm-gridrow height="100%" name="gridrow11_1">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn26_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-lock-outline"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="CLOSED CASES" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow5">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn13" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="CasesTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid2">
+                                <wm-gridrow height="100%" name="gridrow10">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn23" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-search"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn24" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Find" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn12" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageInspections.invoke()" accessroles="InspectorManager,CXAdmin,MunicipalityAdmin">
+                            <wm-layoutgrid height="100%" name="layoutgrid9">
+                                <wm-gridrow height="100%" name="gridrow11_2">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn23_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-find-in-page"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn24_2" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="MANAGE CASES" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+        </wm-page-content>
+    </wm-content>
+    <wm-footer content="footer" name="footer1"></wm-footer>
 </wm-page>
