--- a/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
+++ b/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
@@ -82,7 +82,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn12" padding="2em unset" horizontalalign="center">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageInspections.invoke()" accessroles="InspectorManager,CXAdmin,MunicipalityAdmin">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageInspections.invoke()" accessroles="CXAdmin,MunicipalityAdmin,CodeManager">
                             <wm-layoutgrid height="100%" name="layoutgrid9">
                                 <wm-gridrow height="100%" name="gridrow11_2">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn23_1" class="col-xs-3">
