added tab for Code Roles Files modified - [ManageRoles.html]

--- a/src/main/webapp/pages/ManageRoles/ManageRoles.html
+++ b/src/main/webapp/pages/ManageRoles/ManageRoles.html
@@ -80,6 +80,28 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
+                                <wm-tabpane name="tabpane5" title="Code Roles">
+                                    <wm-layoutgrid name="layoutgrid8">
+                                        <wm-gridrow name="gridrow19">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn22"></wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn23"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow20">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn24"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                </wm-tabpane>
+                                <wm-tabpane name="tabpane4" title="Inspection Roles">
+                                    <wm-layoutgrid name="layoutgrid7">
+                                        <wm-gridrow name="gridrow17">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn19"></wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn20"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow18">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn21"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                </wm-tabpane>
                                 <wm-tabpane name="tabpane2" title="Company Roles">
                                     <wm-layoutgrid name="layoutgrid3">
                                         <wm-gridrow name="gridrow7">
@@ -143,17 +165,6 @@
                                                     </wm-liveform>
                                                 </wm-livegrid>
                                             </wm-gridcolumn>
-                                        </wm-gridrow>
-                                    </wm-layoutgrid>
-                                </wm-tabpane>
-                                <wm-tabpane name="tabpane4" title="Inspection Roles">
-                                    <wm-layoutgrid name="layoutgrid7">
-                                        <wm-gridrow name="gridrow17">
-                                            <wm-gridcolumn columnwidth="6" name="gridcolumn19"></wm-gridcolumn>
-                                            <wm-gridcolumn columnwidth="6" name="gridcolumn20"></wm-gridcolumn>
-                                        </wm-gridrow>
-                                        <wm-gridrow name="gridrow18">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn21"></wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
