--- a/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
+++ b/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
@@ -13,7 +13,7 @@
                         <wm-composite name="composite1" show="bind:Variables.AdminsMunicipalities.dataSet.content.length > 1">
                             <wm-label class="col-md-3 form-control-static" name="label6" caption="Select Municipality" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
-                                <wm-select name="selectMunicipality" datafield="All Fields"></wm-select>
+                                <wm-select name="selectMunicipality" dataset="bind:Variables.EmployeesMunicipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.EmployeesMunicipalities.firstRecord" orderby="MunicipalityName:asc"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
@@ -104,7 +104,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn24_2" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Manage Inspections" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountofInspectionDesignByMunicipality.dataSet[$i]._count" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
