Some things Files modified - [leftnav.html,cx2_published_dataModel.json,Forms.variables.json,UserCreation.js]

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -10,7 +10,7 @@
             <wm-anchor caption="My Municipality" name="orderLink" iconclass="wi wi-account-balance" on-click="Variables.goToPage_MyMunicipality.invoke()" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin" badgevalue="bind:Variables.ProcessFormsCountForEmployee.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_order">
-            <wm-anchor caption="Code Enforcement" name="codeEnforcement" iconclass="wi wi-chrome-reader-mode" on-click="Variables.goToPage_CodeEnforcementDashboard.invoke()" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin,CodeOfficer,CodeManager"></wm-anchor>
+            <wm-anchor caption="Code Enforcement" name="codeEnforcement" iconclass="fa fa-legal" on-click="Variables.goToPage_CodeEnforcementDashboard.invoke()" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin,CodeOfficer,CodeManager"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item11">
             <wm-anchor name="anchorInspections" iconclass="wi wi-find-in-page" caption="Inspections" accessroles="CXAdmin,Inspector,InspectorManager,MunicipalityAdmin" on-click="Variables.goToPage_MunicipalityInspections.invoke()"></wm-anchor>
